--- a/src/main/resources/templates/page/2021/cn/article.html
+++ b/src/main/resources/templates/page/2021/cn/article.html
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     	<li><a title="ICABST2021英文版" href="/">English</a></li>
         </ul>
     </div>
