--- a/src/main/resources/templates/page/2021/cn/cfp.html
+++ b/src/main/resources/templates/page/2021/cn/cfp.html
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
     </ul>
   </div>
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20">
         <article class="row-txt">
           <p style="text-align: center; font-size: 22px">
-            <strong>2020国际前沿生物科学与技术学术会议<br/>SCI、EI、ISTP（CPCI-S）征文通知<br/></strong>
+            <strong>2021国际前沿生物科学与技术学术会议<br/>SCI、EI、ISTP（CPCI-S）征文通知<br/></strong>
 					</p>
 					<p style="text-align:right; font-size: 18px"><a class="pointer" href="/cn/download/SCI_Impact_Fctor_20200701.xlsx" target="_blank" style="color: #102cf7"><u>------点击下载最新SCI影响因子(2020年6月更新)</u></a></p>
           <div class="mb-10">
@@ -171,9 +171,10 @@ var _hmt = _hmt || [];
 						<div class="pl-23">
             <p>1. <a class="pointer" href="/cn/article" target="_blank" style="color: #102cf7"><u>点击进入在线投稿链接系统</u></a><br/>
               2. 直接将文章发至投稿邮箱editor@apanse.com, 并留言告知您的电话、发表需求等必要信息<br/>
-							截稿时间：SCI期刊长期征稿，每月均有送交机会，早投稿早发表；
-							SCI摘要 10月31日截稿
-							EI会议 12月15日截稿
+							截稿时间：SCI期刊长期征稿，每月均有送交机会，早投稿早发表；<br/>
+							SCI摘要: 2020年摘要已截止，2021年征稿即将启动<br/>
+							EI会议 2020年12月25日截稿<br/>
+							SCI全文：长期征稿，每月送交<br/>
             </p>
 						</div>
           </div>
@@ -212,7 +213,7 @@ var _hmt = _hmt || [];
 						<div class="pl-23">
             <p><strong>1. 投稿要求</strong><br/>
               所有投稿文章需承诺无一稿多投，未在其他期刊或会议上公开发表;<br/>
-              初稿需为word文档，中英文均可（终稿必须为英文），篇幅在2500words左右，图表分辨率在300dpi以上或作为独立附件提交；<br/>
+              初稿需为word文档，中英文均可（终稿必须为英文），图表分辨率在300dpi以上或作为独立附件提交；<br/>
               初稿无需排版，在文章通过审核后，会根据目标期刊的要求提供模板文件，届时完成排版即可；<br/>
 							SCI期刊长期征稿，每月均有送交机会，早投稿早发表；<br/>
             </p>
@@ -250,10 +251,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
     		<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日截稿</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
     		</div>
