--- a/src/main/resources/templates/page/2021/cn/cpci.html
+++ b/src/main/resources/templates/page/2021/cn/cpci.html
@@ -58,7 +58,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
     </ul>
   </div>
@@ -77,6 +77,7 @@ var _hmt = _hmt || [];
           </p>
 					<p style="text-align:right; font-size: 16px"><a href="https://iopscience.iop.org/issue/1755-1315/470/1" target="_blank" style="color: #102cf7"><u>------点击查看2019年EI会议论文集</u></a></p>
           <div class="mb-10">
+						<p style="text-align:center; color: red"><strong>目前征稿为2020年会后征稿，12月底截稿，21年2月见刊发表；21年EI会议征稿暂未启动。</strong></p>
             <p>
             	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  “2020国际前沿生物科学与技术学术会议”原定于2020年10月28日-30日在海南三亚召开，因疫情影响，转为视频会议的形式在Microsoft Teams网络平台中进行召开。
 							本届会议由亚太自然科学与工程协会、河内国立教育大学(越南)、玛希隆大学(泰国)、西班牙生物医药研究中心、科学网、美国化学学会(ACS)、全球医学会议网、丁香会议等单位提供学术及媒体支持；同时由IOP Science出版社、Wiley出版社提供学术出版支持。<br/>
@@ -151,7 +152,7 @@ var _hmt = _hmt || [];
 		<div class="mb-10">
 		  <strong>六、检索范例</strong>
 		  <p>
-			<strong>点击<a href="/cn/download/ei_index.png" target="_blank" style="color: #102cf7">查看大图</a>，另您可进入EI数据库自行查看检索情况</strong>
+			<strong>点击<a href="/cn/download/ei_index2019.png" target="_blank" style="color: #102cf7">查看大图</a>，另您可进入EI数据库自行查看检索情况</strong>
 			<ul>
 			<li><img src="../img/ei_index.png" height="300px"></li>
 			<div class="clear"></div>
@@ -174,10 +175,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
     		<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日截稿</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
     		</div>
