--- a/src/main/resources/templates/page/2021/cn/registration.html
+++ b/src/main/resources/templates/page/2021/cn/registration.html
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
     </ul>
   </div>
@@ -94,7 +94,7 @@ var _hmt = _hmt || [];
           1. <a class="pointer" href="/cn/submit" target="_blank" style="color: #102cf7"><u><strong>通过在线报名页面提交参会信息(初始文档需小于10MB)</strong></u></a>，并选择参会类型
         </p>
 				<p>
-					2. 如在线提交失败，可下载并填写<a class="pointer" href="/cn/download/ICABST-Registration-Form-cn2020.xlsx" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com
+					2. 如在线提交失败，可下载并填写<a class="pointer" href="/cn/download/ICABST-Registration-Form-cn2021.xlsx" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com
 				</p>
         <p>
           3. 我方会在一周内与您核对相关信息并提供相关材料（如会议通知、录用函等）
@@ -109,7 +109,7 @@ var _hmt = _hmt || [];
           6. 参会者收到正式邀请函后办理签证、审批等程序。
         </p>
         <p>
-          注：1. 本届会议将于10月底召开，鉴于参加学术会议需要所在单位提前审批，因此希望您提前安排参会及申请事宜，以便我方将提供需要的文档材料。
+          注：1. 本届会议将于9月底召开，鉴于参加学术会议需要所在单位提前审批，因此希望您提前安排参会及申请事宜，以便我方将提供需要的文档材料。
         </p>
         <p>
           注：2. 如有参会者提前需要邀请函、录用函或其他相关材料，请将相关请求发至会务邮箱icabst@apanse.com
@@ -163,9 +163,9 @@ var _hmt = _hmt || [];
       <div class="background4" style="padding-left: 50px; padding-bottom: 10px; padding-top: 5px;">退费说明</div>
       <div class="public_p pb-20 pl-30">
         <p>如有特殊原因欲取消注册的参会人员，请以正式书面文件/扫描件的形式通知组委会</p>
-        <p>1）如在8月31日前取消，则全额退费（转账退款的手续费需由参会者自行承担）</p>
-        <p>2）如在9月1日至9月30日内取消，则退款50%（转账退款的续费需由参会者自行承担）</p>
-        <p>3）10月1日后无法取消，不退费</p>
+        <p>1）如在7月31日前取消，则全额退费（转账退款的手续费需由参会者自行承担）</p>
+        <p>2）如在8月1日至8月31日内取消，则退款50%（转账退款的续费需由参会者自行承担）</p>
+        <p>3）9月1日后无法取消，不退费</p>
         <p>*如已缴费的参会者无法参会，可将其参会名额转至其他同事、同学。</p>
 				<p>*退费均采用“原路退回”的形式进行</p>
       </div>
@@ -183,10 +183,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
     		<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日截稿</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
     		</div>
