--- a/src/main/resources/templates/page/2021/cn/sciabstract.html
+++ b/src/main/resources/templates/page/2021/cn/sciabstract.html
@@ -58,7 +58,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
     </ul>
   </div>
@@ -72,16 +72,19 @@ var _hmt = _hmt || [];
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="public_p pb-20">
         <article class="row-txt">
-          <p style="text-align: center; font-size: 20px">
-            <strong>摘要/短文安排SCI期刊正式发表，8月20日截稿，确保检索<br/>中科院三区，影响因子2.65<br/></p>
-						<p style="text-align:right; font-size: 16px"><a href="https://onlinelibrary.wiley.com/toc/17427843/2020/126/S5" target="_blank" style="color: #102cf7">------点击查看往年SCI摘要发表情况</a></strong>
-          </p>
+          <p style="text-align: center; font-size: 20px"><strong>
+            摘要/短文安排SCI期刊正式发表，确保检索<br/>中科院三区，影响因子2.65<br/></p>
+						<p style="text-align:right; font-size: 16px">
+						<a href="https://onlinelibrary.wiley.com/toc/17427843/2020/126/S5" target="_blank" style="color: #102cf7">------点击查看2019年SCI摘要发表情况</a><br/>
+						<a href="https://onlinelibrary.wiley.com/toc/17427843/2020/127/S5" target="_blank" style="color: #102cf7">------点击查看2020年SCI摘要发表情况</a>
+					</strong></p>
           <div class="mb-10">
+						<p style="text-align:center; color: red"><strong>2020年SCI摘要征稿已结束，2021年征稿即将开启，如您有投稿意向，可先完成文章提交或口头预约版面。</strong></p>
             <p>
             	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届大会由亚太自然科学与工程协会、河内国立教育大学(越南)、玛希隆大学(泰国)、湄洲大学(泰国)联合举办，由WILEY出版社、IOP Science出版社提供出版支持，同时由科学网、美国化学学会(ACS)、全球医学会议网、丁香会议等多个学术媒体提供网络支持。
 							投稿我方的摘要和短文，将根据发表意向安排SCI期刊正式出版，并送交SCI数据库收录检索。（<strong>重要提醒：</strong>现有较多机构/会议征收SCI摘要发表，但由于期刊的卷期版面有限，且仅有少许会议得到了WILEY出版社的授权发表，望各位学者仔细甄别。）<br/>
 							目前已合作发表SCI摘要的单位有：郑州大学、河南中医药大学、河北科技大学、河北师范大学、燕山大学、北京科技大学、天津大学、天津科技大学、四川农业大学、西南医科大学、吉林大学、吉林大学珠海学院、吉林农业科技大学、哈尔滨理工大学、哈尔滨工业大学、贵州教育大学, 贵州财经大学, 贵州师范大学、成都信息工程大学、中国中医科学院、石河子大学第二附属医院、郑州大学附属医院、湖北医药学院附属医院、中国人民解放军医院、成都市人民医院、武汉市中医医院等
-							<img src="../img/bcpt.png" height="260" width="170">&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/BCPT见刊.png" height="260" width="480"><br/><br/>
+							<img src="../img/BCPT见刊2019.png" height="230" width="430">&nbsp;&nbsp;&nbsp;&nbsp;<img src="../img/BCPT见刊2020.png" height="230" width="430"><br/><br/>
 							
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>SCI摘要、短文简介如下：</strong><br/>
             	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>撰写简易：</strong>200-300个英文单词即可；摘要发表不会影响全文的投稿和出版<br/>
@@ -99,8 +102,8 @@ var _hmt = _hmt || [];
 								<strong>期刊名称：</strong>WILEY出版社旗下期刊：Basic & Clinical Pharmacology & Toxicology<br/>
 								<strong>影响因子：</strong>2.65 （2020年6月30日发布）<br/>
 								<strong>期刊分区：</strong>中科院三区，JCR分区Q2<br/>
-								<strong>发表检索：</strong>2020年底发表，发表后2个月完成SCI检索<br/>
-								<strong>投稿截止：</strong>最终截稿时间为10月10日<br/>
+								<strong>发表检索：</strong>2021年10月份发表，发表后2个月完成SCI检索<br/>
+								<strong>投稿截止：</strong>2021年征稿即将开启<br/>
 							</p>
             </div>
           </div>
@@ -164,10 +167,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
     		<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日截稿</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
     		</div>
