--- a/src/main/resources/templates/page/2021/en/about.html
+++ b/src/main/resources/templates/page/2021/en/about.html
@@ -16,7 +16,7 @@ var _hmt = _hmt || [];
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
   <title>About ICABST|Intorduction--2021 International Conference On Advances in Biological Science and Technology (ICABST2021)</title>
   <meta name="keywords" content="ICABST,2021,biomaterial,biomedical,About,Biotechnology,conference,bioengineering,biotechnology conference,Sanya,China,Asia" />
-  <meta name="description" content="ICABST2021 will be held during April. 28-30, 2021" />
+  <meta name="description" content="ICABST2021 will be held during September. 28-30, 2021" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -57,7 +57,7 @@ var _hmt = _hmt || [];
       <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
 			<li><a title="Program" href="/program">Program</a></li>
       <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
-      <li><a title="Venue" href="/venue">Venue</a></li>
+      <li><a title="WPCR" href="/wpcr">WPCR</a></li>
     	<li><a title="Chinese" href="/cn">CHINESE</a></li>
     </ul>
   </div>
@@ -72,35 +72,34 @@ var _hmt = _hmt || [];
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">About</div>
         <div class="public_p pb-20 pl-30">
 					<p>
-					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Based on the <a href="/achieve" target="_blank" style="color: #102cf7"><u>successfully held of ICABST2019 in Bangkok, Thailand</u></a> -- <strong>2020 International Conference on Advances in Biological Science and Technology</strong> was planned to be held in Sanya, China during Oct. 28-30. 
-					  While due to the effect of COVID-19, <strong>ICABST2020 will be held during Oct. 28-30, 2020 by video conference instead</strong>. 
-					</p>
-					<p>ICABST2020 is organized by Asia-Pacific Association of Natural Science and Engineering, and supported by Hanoi National University of Education, Mahidol University, American Chemistry Society, IOP Science and other academic institutions & medias partners.</p>
+					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Based on the <a href="/2020/achieve" target="_blank" style="color: #102cf7"><u>successfully held of ICABST2020</u></a> -- <strong>2021 International Conference on Advances in Biological Science and Technology</strong> will be held during September 28-30 as an online video conference.
+						ICABST2021 is organized by Asia-Pacific Association of Natural Science and Engineering (APANSE), co-organized by Hanoi National University of Education, Mahidol University, and supported by American Chemistry Society, IOP Science and other academic institutions & medias partners.</p>
 					<p>
 						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As an annual gathering, it provides an extensive platform for scientists, researchers and scholars to present their research results and newest findings
 						 in all fields of Biological Science and Technology, especially in Biotechnology and Bioengineering, Biomedical Engineering, Clinical Medicine, Biopharmaceuticals and Pharmacology, Animal and Plant Sciences and other related topics, discuss the practical challenges encountered recommend better solutions for biotechnology and biomedicine. 
-						 ICABST2020 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
+						 ICABST2021 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
 						 The conference certification will be issued to all attendees including listeners. 
 					</p>
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Besides, the ICABST workshop "International Workshop on Pharmaceutical and Clinical Research, WPCR2021" will be held simultaneously with ICABSTS2021. For more details about WPCR2021, please click <a href="/cn/wpcr" target="_blank" style="color: #102cf7"><u>https://icabst.apanse.com/cn/wpcr</u></a><br/>
+					</p>	
 					<!--p>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;For all submitted abstracts, after peer review, accepted ones will be printed in conference program and abstract book. 
 					ICABST2019 has been collected by Nature Events (www.nature.com), ScienceNet, CNKI, AIP Conference Proceedings, IOP Conference Series and other academic affiliations.
 					</p-->
 					<p>
-					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please circulate ICABST2020 to the attention of any of your colleagues who may be interested in participating the conference
-						(<a href="/cn/download/flyer2020.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
+					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please help circulate ICABST2021 to the attention of any of your colleagues who may be interested in participating the conference
+						(<a href="/cn/download/flyer2021.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
 					</p>
-          <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </p>
 
           <p><strong>Important Dates</strong></p>
-          <p>
+          <!--p>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<del>Check-in Time: A. October 28, 2020 ---- 15:00-17:00</del></br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<del>B. October 29, 2020 ---- 8:00-8:40</del>
-					</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Abstract Deadline: October 10, 2020</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Registration Deadline: October 15, 2020 (Since Oct. 1, only Late/On-site Registration available)</p>
+					</p-->
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Conference Dates: September 28-30, 2021</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Abstract Deadline: August 31, 2021</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Registration Deadline: September 15, 2020</p>
 					<p><strong>For more information/details about the video conference arrangement, please click <a title="Submission" class="pointer" href="/submission" style="color: #102cf7" target="_blank"><u>Submission</u></a> for your reference.</strong></p>
 				</div>
 				
