--- a/src/main/resources/templates/page/2021/en/organizer.html
+++ b/src/main/resources/templates/page/2021/en/organizer.html
@@ -16,7 +16,7 @@ var _hmt = _hmt || [];
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
   <title>ICABST Organization|Organizers--2021 International Conference On Advances in Biological Science and Technology (ICABST2021)</title>
   <meta name="keywords" content="ICABST,2021,biomaterial,biomedical,About,Biotechnology,conference,bioengineering,biotechnology conference,Sanya,China,Asia" />
-  <meta name="description" content="ICABST2021 will be held during April. 28-30, 2021" />
+  <meta name="description" content="ICABST2021 will be held during September. 28-30, 2021" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -57,7 +57,7 @@ var _hmt = _hmt || [];
       <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
 			<li><a title="Program" href="/program">Program</a></li>
       <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
-      <li><a title="Venue" href="/venue">Venue</a></li>
+      <li><a title="WPCR" href="/wpcr">WPCR</a></li>
     	<li><a title="Chinese" href="/cn">CHINESE</a></li>
     </ul>
   </div>
@@ -103,6 +103,7 @@ var _hmt = _hmt || [];
 					<p>
 					Andrea Scribante, University of Pavia, Italy <br/>
 					Anna Ardévol, Universitat Rovira i Virgili, Spain <br/>
+					Chen Xiong, Taihe Hospital Affiliated to Hubei University of Medicine, China<br/>
 					Ching-An Peng, University of Idaho, USA <br/>
 					Christophis Koroneos , University of Western Macedonia, Greece <br/>
 					Dinh-Toi Chu, Hanoi National University of Education, Vietnam <br/>
