--- a/src/main/resources/templates/page/2021/cn/about.html
+++ b/src/main/resources/templates/page/2021/cn/about.html
@@ -57,7 +57,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
     </ul>
   </div>
@@ -75,28 +75,31 @@ var _hmt = _hmt || [];
             <strong>2021国际前沿生物科学与技术学术会议（ICABST2021）会议通知</strong>
           </p>
           <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2021国际前沿生物科学与技术学术会议（ICABST2021）原定于2020年10月28日-30日在海南三亚召开，现因疫情影响，本届会议转为视频会议的形式进行召开--所有口头报告人员将其报告形成影像视频文件，张贴海报人员将其报告制作成电子版海报，并发至组委会，我方将在会议日期内开通视频通道。<u>本届大会由亚太自然科学与工程协会、河内国立教育大学(越南)、玛希隆大学(泰国)、湄洲大学(泰国)、西班牙生物医药研究中心联合举办，由WILEY出版社、IOP Science出版社提供出版支持，同时由科学网、美国化学学会(ACS)、全球医学会议网、丁香会议等多个学术媒体提供网络支持</u>。
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2021国际前沿生物科学与技术学术会议（ICABST2021）将于2021年9月28-30日以在线视频会议的形式进行召开--所有口头报告人员将其报告形成影像视频文件，张贴海报人员将其报告制作成电子版海报，并发至组委会，我方将在会议日期内开通视频通道。<u>本届大会由亚太自然科学与工程协会、河内国立教育大学(越南)、玛希隆大学(泰国)、湄洲大学(泰国)、西班牙生物医药研究中心联合举办，由WILEY出版社、IOP Science出版社提供出版支持，同时由科学网、美国化学学会(ACS)、全球医学会议网、丁香会议等多个学术媒体提供网络支持</u>。
           </p>
           <p>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物及分子材料、生物信息学、计算生物学、农业食品科学、及动植物科学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。
           </p>
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;另，本届会议开设“药学与临床研究分会 （International Workshop on Pharmaceutical and Clinical Research, WPCR2021）”，详情：<a href="/cn/wpcr" target="_blank" style="color: #102cf7"><u>https://icabst.apanse.com/cn/wpcr</u></a><br/>
+					</p>
           <!--p>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议；
             且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。
           </p-->
 					<p>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息
-						<a class="pointer" href="/cn/download/flyer2020.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
+						<a class="pointer" href="/cn/download/flyer2020.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册及会议通知）</u></a>。
 					</p>
 
           <p><strong>重要时间</strong></p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<del>签到时间：A. 2020年10月28日 15:00-17:00</del><br/>
+          <!--p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<del>签到时间：A. 2020年10月28日 15:00-17:00</del><br/>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<del>B. 2020年10月29日 8:00-8:40</del>
-					</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参会报名截止: 2020年9月30日</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCI摘要截止：2020年10月31日最后批次截止</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EI会议截止：2020年12月15日最后批次截止</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCI全文投稿：2020年版面已截止，21年版面预约中<br/>&nbsp;</p>
+					</p-->
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参会报名截止: 2021年9月15日</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCI摘要截止：即将开启征稿</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EI会议截止：2020年12月25日最后批次截止</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCI全文投稿：每月送交，长期征稿<br/>&nbsp;</p>
 					
 					<p><strong>有关视频会议细节，请参考<a title="参会注册" class="pointer" href="/cn/registration" style="color: #102cf7" target="_blank"><u>大会注册</u></a>中相关内容</strong></p>
         </div>
@@ -154,10 +157,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
     		<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日截稿</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
     		</div>
