--- a/src/main/resources/templates/page/2021/cn/index.html
+++ b/src/main/resources/templates/page/2021/cn/index.html
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
       </ul>
     </div>
@@ -93,10 +93,11 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:50px; line-height: 40px">会议简介</div>
 				<div class="public_p pl-30">
         <p>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在<a href="/cn/achieve" target="_blank" style="color: #102cf7"><u>2019年本届会议成功召开</u></a>的基础上，2020国际前沿生物科学与技术学术会议（ICABST2020）原定于2020年10月28日-30日在海南三亚召开，现因疫情影响，本届会议转为视频会议的形式进行召开--所有口头报告人员将其报告形成影像视频文件，张贴海报人员将其报告制作成电子版海报，并发至组委会，我方将在会议日期内开通视频通道。<u>本届大会由亚太自然科学与工程协会、河内国立教育大学(越南)、玛希隆大学(泰国)、湄洲大学(泰国)、西班牙生物医药研究中心联合举办，由WILEY出版社、IOP Science出版社提供出版支持，同时由科学网、美国化学学会(ACS)、全球医学会议网、丁香会议等多个学术媒体提供网络支持。</u><br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/2020cn/achieve" target="_blank" style="color: #102cf7"><u>2020年ICABST在Microsoft Teams平台中以线上视频会议的形式成功召开</u></a>，2021第三届国际前沿生物科学与技术学术会议（ICABST2021）将于2021年9月28日-30日同样以视频会议的形式在该平台召开。<u>本届大会由亚太自然科学与工程协会、河内国立教育大学(越南)、玛希隆大学(泰国)、湄洲大学(泰国)、西班牙生物医药研究中心联合举办，由WILEY出版社、IOP Science出版社提供出版支持，同时由科学网、美国化学学会(ACS)、全球医学会议网、丁香会议等多个学术媒体提供网络支持。</u><br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物及分子材料、生物信息学、计算生物学、农业食品科学、及动植物科学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn/download/flyer2020.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;另，本届会议开设“药学与临床研究分会 （International Workshop on Pharmaceutical and Clinical Research, WPCR2021）”，详情：<a href="/cn/wpcr" target="_blank" style="color: #102cf7"><u>https://icabst.apanse.com/cn/wpcr</u></a><br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn/download/flyer2021.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册及会议通知）</u></a>。
         </p>
       </div>
 			</div>
@@ -105,17 +106,16 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:50px; line-height: 40px">重要通知</div>
 				<div class="public_p pl-30">
         <ul>
-					<li><a href="/cn/cpci" target="_blank" style="color: #102cf7"><u>EI会议论文集---会后征文启动</u></a>  <span class="color-6" style="float:right">2020-11-10</span></li>
-					<li><a href="/cn/achieve" target="_blank" style="color: #102cf7"><u>ICABST2020网络视频会议成功召开</u></a>  <span class="color-6" style="float:right">2020-11-02</span></li>
-					<li><a href="/cn/download/ICABST2020 Conference Program.pdf" target="_blank" style="color: #102cf7"><u>ICABST2020会议指南发布</u></a>  <span class="color-6" style="float:right">2020-10-15</span></li>
-					<li><a href="/cn/cfp" target="_blank" style="color: #102cf7"><u>最新SCI期刊影响因子发布，我方合作期刊均正常检索</u></a>  <span class="color-6" style="float:right">2020-07-01</span></li>
-					<li><a href="/cn/venue" target="_blank" style="color: #102cf7"><u>受全球疫情影响，本届会议将转为视频会议的形式召开</u></a>  <span class="color-6" style="float:right">2020-04-15</span></li>
-					<li><a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI期刊(遴选优秀论文发表)----生物技术、生物工程领域</u></a>  <span class="color-6" style="float:right">2020-03-16</span></li>
-					<li><a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI期刊(遴选优秀论文发表)----生物医药、临床及健康护理领域</u></a>  <span class="color-6" style="float:right">2020-03-16</span></li>
-					<li><a href="/cn/sci3" target="_blank" style="color: #102cf7"><u>SCI期刊(遴选优秀论文发表)----农业、动植物及综合领域</u></a>  <span class="color-6" style="float:right">2020-03-16</span></li>
-					<li><a href="/cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI会议摘要发表--仅限生物医药领域</u></a>  <span class="color-6" style="float:right">2020-03-05</span></li>
-          <!--li><a href="/cn/proposal" target="_blank" style="color: #102cf7"><u>2020年会议合办邀请&通知</u></a>  <span class="color-6" style="float:right">2020-01-12</span></li-->
-					<li><a href="/2019cn/achieve" target="_blank" style="color: #102cf7"><u>ICABST2019在曼谷塔瓦那酒店成功召开</u></a>  <span class="color-6" style="float:right">2019-12-30</span></li>
+					<li><a href="/cn/cpci" target="_blank" style="color: red"><u>EI会议论文集---12月底截稿</u></a>  <span class="color-6" style="float:right">2020-10-31</span></li>
+					<!--li><a href="/cn/download/ICABST2020 Conference Program.pdf" target="_blank" style="color: #102cf7"><u>ICABST2020会议指南发布</u></a>  <span class="color-6" style="float:right">2020-10-15</span></li-->
+					<!--li><a href="/cn/cfp" target="_blank" style="color: #102cf7"><u>最新SCI期刊影响因子发布，我方合作期刊均正常检索</u></a>  <span class="color-6" style="float:right">2020-07-01</span></li-->
+					<li><a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI期刊(遴选优秀论文发表)----生物技术、生物工程领域</u></a>  <span class="color-6" style="float:right">2020-12-10</span></li>
+					<li><a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI期刊(遴选优秀论文发表)----生物医药、临床及健康护理领域</u></a>  <span class="color-6" style="float:right">2020-12-10</span></li>
+					<li><a href="/cn/sci3" target="_blank" style="color: #102cf7"><u>SCI期刊(遴选优秀论文发表)----农业、动植物及综合领域</u></a>  <span class="color-6" style="float:right">2020-12-10</span></li>
+					<li><a href="/cn/sciabstract" target="_blank" style="color: #102cf7"><u>2020年SCI会议摘要已成功发表--最新征稿即将开启</u></a>  <span class="color-6" style="float:right">2020-12-07</span></li>
+					<li><a href="/cn/proposal" target="_blank" style="color: #102cf7"><u>2021年会议合办邀请&通知</u></a>  <span class="color-6" style="float:right">2020-11-22</span></li>
+					<li><a href="/2020cn/achieve" target="_blank" style="color: #102cf7"><u>ICABST2020网络视频会议成功召开</u></a>  <span class="color-6" style="float:right">2020-11-02</span></li>
+					<li><a href="/2019cn/achieve" target="_blank" style="color: #102cf7"><u>ICABST2019在曼谷塔瓦那酒店成功召开</u></a>  <span class="color-6" style="float:right">2020-10-31</span></li>
         </ul>
         <div class="clear"></div>
       </div>
@@ -125,8 +125,8 @@ var _hmt = _hmt || [];
         <div class="url">
           <ul>
             <li><a class="time pl-30 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>倒计时:&nbsp;<span id="content"></span>&nbsp;&nbsp;&nbsp;天</strong></a></li>
-            <li><a class="announcement" href="/cn/download/flyer2020.pdf" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
-            <li><a class="invitation" href="/cn/download/ICABST-Registration-Form-cn2020.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
+            <li><a class="announcement" href="/cn/download/flyer2021.pdf" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
+            <li><a class="invitation" href="/cn/download/ICABST-Registration-Form-cn2021.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
 						<li><a class="article" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank">&emsp;&emsp;&emsp;<strong>摘要模板</strong></a></li>
           </ul>
           <div class="clear"></div>
@@ -146,10 +146,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日截稿</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
 				</div>
@@ -319,7 +319,7 @@ var _hmt = _hmt || [];
     } else {
     }
   };
-  getchaTime("", "10/28/2020");
+  getchaTime("", "9/28/2021");
   <!--倒计时天数 js-->
   $(".fullSlide").hover(function () {
       $(this).find(".prev,.next").stop(true, true).fadeTo("show", 0.5)
