--- a/src/main/resources/templates/page/2021/cn/organization.html
+++ b/src/main/resources/templates/page/2021/cn/organization.html
@@ -57,7 +57,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
      </ul>
    </div>
@@ -85,13 +85,13 @@ var _hmt = _hmt || [];
         </p>
       </div>
 
-      <div class="background4" style="padding-left:55px; padding-bottom: 10px;">大会主席</div>
+      <!--div class="background4" style="padding-left:55px; padding-bottom: 10px;">大会主席</div>
       <div class="public_p pb-20 pl-30">
         <p>
 					Prof. Domenico Lombardo, CNR - Consiglio Nazionale delle Ricerche, IPCF- Istituto Processi Chimico-Fisici, Italy<br/>
 					Dr. Dinh-Toi Chu, Faculty of Biology, Hanoi National University of Education, Vietnam<br/>
 				</p>
-      </div>
+      </div-->
 			
 				<!--div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px; font-family:'Times New Roman';">Organizing Committee</div>
 				<div class="public_p pb-20 pl-30">
@@ -104,6 +104,7 @@ var _hmt = _hmt || [];
 					<p>
 					Andrea Scribante, University of Pavia, Italy <br/>
 					Anna Ardévol, Universitat Rovira i Virgili, Spain <br/>
+					Chen Xiong, Taihe Hospital Affiliated to Hubei University of Medicine, China<br/>
 					Ching-An Peng, University of Idaho, USA <br/>
 					Christophis Koroneos , University of Western Macedonia, Greece <br/>
 					Dinh-Toi Chu, Hanoi National University of Education, Vietnam <br/>
@@ -147,10 +148,10 @@ var _hmt = _hmt || [];
         </p>
 				</div>
 
-      <div class="background4" style="padding-left: 50px; padding-bottom: 10px; padding-top: 5px;">ICABST2020合办邀请&通知</div>
+      <div class="background4" style="padding-left: 50px; padding-bottom: 10px; padding-top: 5px;">ICABST2021合办邀请&通知</div>
       <div class="public_p pb-20 pl-30 lh-20">
 					<p>
-						 ICABST is pleased to announce this Call for Proposals for individuals or groups interested in co-organize the next ICABST conference, slated for the third quarter of 2020.
+						 ICABST is pleased to announce this Call for Proposals for individuals or groups interested in co-organize the next ICABST conference, slated for the third quarter of 2021.
 						 If you are not personally interested but know of someone else who could do an excellent job of organizing this event, please feel free to forward this information.<br/><br/>
 						 </p>
 					<p>
@@ -211,10 +212,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
     		<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日截稿</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
     		</div>
