--- a/src/main/resources/templates/page/2021/cn/program.html
+++ b/src/main/resources/templates/page/2021/cn/program.html
@@ -58,7 +58,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
     </ul>
   </div>
@@ -80,53 +80,53 @@ var _hmt = _hmt || [];
 					4. 所有报告将在会议日期内设置播放通道，届时参会者可通过通道进入视频会议；<br/>
 					5. 我方将根据参会者时区制定会议具体召开时间<br/><br/>
 				</p>
-				<p><a href="/cn/download/ICABST2020 Conference Program.pdf" target="_blank" style="color: #102cf7"><u>下载ICABST2020会议指南</u></a></p>
+				<!--p><a href="/cn/download/ICABST2020 Conference Program.pdf" target="_blank" style="color: #102cf7"><u>下载ICABST2021会议指南</u></a></p-->
 			</div>
 			
 			<div class="background4" style="padding-left: 50px; padding-bottom: 10px; padding-top: 5px;">近期录用报告</div>
 			<div class="public_p pb-20 pl-30">
 							<p>
-			1 Soft Interaction and Colloidal Stability of Nanocarriers in Drug Delivery Applications<br/>
-			2 Development of bacterial cellulose based commercial products from waste food resources<br/>
-			3 Implantable Highly Compliant Devices for Heating of Internal Organs<br/>
-			4 Biological invasions in forest ecosystems from Hai Duong Province, Northern Vietnam<br/>
-			5 Comparison Waterlogging Tolerance Potential of Cassava<br/>
-			6 Pathogenicity Scoring System for Selection of Bacterial Consortium Formulated as Bioremediation Agent of Hospital Wastewater in Central Java<br/>
-			7 Genome wide analysis of DNA binding with one finger Transcription Factor Gene Family in Olea europaea<br/>
-			8 Inexact Search and Bridged Pattern Recognition Scheme for Chemical Activity Prediction<br/>
-			9 Botanical characteristics, medicinal properties and liver protective effects of Elephantopus mollis<br/>
-			10 Advanced Nano-Fibrous Materials for Wearable Energy Harvesting Devices<br/>
-			11 Effects of Membrane Viscosity on Capsule Dynamics in Shear Flow<br/>
-			12 Effects of lipid-lowering tablets on body weight and liver index of normal rats<br/>
-			13 Olive Pit Size May Predict Kernel Ratio <br/>
-			14 Translating AI for Biomedicine and Healthcare: Challenges and Opportunities<br/>
-			15 Food Production, food return on investment and quality of life in different regions across the globe<br/>
-			16 Antiviral activity of silymarin and baicalein against EV-A71 in cell cultures<br/>
-			17 Herbicidal Activity of phosphinothricin acetyltransferase (PAT) Expressed in Escherichia coli<br/>
-			18 Effect of cyclic, low dose pyrimethamine treatment in patients with Late Onset Tay Sachs: an open label, extended pilot study<br/>
-			19 Surface Modification of Electrode for Implantable Device to Store Alkali-ion<br/>
-			20 A big data of rehabilitation process management based on block chain<br/>
-			21 Application of Ergonomics in Health Care<br/>
-			22 COVID-19, Improve Public Health Knowledge In Action, But Still Need Efforts<br/>
-			23 Effect of Qingnao tablet on blood stasis model in rats<br/>
-			24 Study on functional recovery of acupuncture after knee arthroplasty<br/>
-			25 Effect of bone powder on toe swelling induced by egg white in rats<br/>
-			26 Effect of Jiangzhi Tablets on Blood Lipid and Blood Biochemical Indexes in Rat Hyperlipemia Model<br/>
-			27 Analysis on the Spatial - Temporal Differentiation of Agricultural Water Resource Use Efficiency in Yangtze River Economic Belt<br/>
-			28 Fiscal Decentralization Effect on the Efficiency of Basic Education Financial Expenditure: Based on the Malmquist-OLS Two Stage Method<br/>
-			29 A special review on clinical application of Excel rapid sampling<br/>
-			30 Research on Relations Between Political Equilibrium of Local Government and the Provision of Rural Public Goods in China<br/>
-			31 Analysis on the Changes of Medication in Military Outpatient Clinic of a Military Hospital in 2014 and 2018<br/>
-			32 Interweave of the pharmaceutical-related genes and the pathogenic variants in two centenarians affecting the apoptosis pathway<br/>
-			33 Clinical study of uterine artery embolization for refractory postpartum hemorrhage<br/>
-			34 Effect of comprehensive nursing intervention on rehabilitation of patients after total hip arthroplasty<br/>
-			35 Experimental Study on Acute Toxicity of Erfukang Oral Liquid<br/>
-			36 Study on the pharmacodynamics of oral liquid of Erfukang<br/>
-			37 The treatment of calcaneal fracture with percutaneous poking reduction through the gap of fractures and internal fixation with canulated screw<br/>
-			38 Effect of Qingnao tablet on blood stasis model of mice<br/><br/><br/>
+								1 Soft Interaction and Colloidal Stability of Nanocarriers in Drug Delivery Applications<br/>
+								2 Development of bacterial cellulose based commercial products from waste food resources<br/>
+								3 Implantable Highly Compliant Devices for Heating of Internal Organs<br/>
+								4 Biological invasions in forest ecosystems from Hai Duong Province, Northern Vietnam<br/>
+								5 Comparison Waterlogging Tolerance Potential of Cassava<br/>
+								6 Pathogenicity Scoring System for Selection of Bacterial Consortium Formulated as Bioremediation Agent of Hospital Wastewater in Central Java<br/>
+								7 Genome wide analysis of DNA binding with one finger Transcription Factor Gene Family in Olea europaea<br/>
+								8 Inexact Search and Bridged Pattern Recognition Scheme for Chemical Activity Prediction<br/>
+								9 Botanical characteristics, medicinal properties and liver protective effects of Elephantopus mollis<br/>
+								10 Advanced Nano-Fibrous Materials for Wearable Energy Harvesting Devices<br/>
+								11 Effects of Membrane Viscosity on Capsule Dynamics in Shear Flow<br/>
+								12 Effects of lipid-lowering tablets on body weight and liver index of normal rats<br/>
+								13 Olive Pit Size May Predict Kernel Ratio <br/>
+								14 Translating AI for Biomedicine and Healthcare: Challenges and Opportunities<br/>
+								15 Food Production, food return on investment and quality of life in different regions across the globe<br/>
+								16 Antiviral activity of silymarin and baicalein against EV-A71 in cell cultures<br/>
+								17 Herbicidal Activity of phosphinothricin acetyltransferase (PAT) Expressed in Escherichia coli<br/>
+								18 Effect of cyclic, low dose pyrimethamine treatment in patients with Late Onset Tay Sachs: an open label, extended pilot study<br/>
+								19 Surface Modification of Electrode for Implantable Device to Store Alkali-ion<br/>
+								20 A big data of rehabilitation process management based on block chain<br/>
+								21 Application of Ergonomics in Health Care<br/>
+								22 COVID-19, Improve Public Health Knowledge In Action, But Still Need Efforts<br/>
+								23 Effect of Qingnao tablet on blood stasis model in rats<br/>
+								24 Study on functional recovery of acupuncture after knee arthroplasty<br/>
+								25 Effect of bone powder on toe swelling induced by egg white in rats<br/>
+								26 Effect of Jiangzhi Tablets on Blood Lipid and Blood Biochemical Indexes in Rat Hyperlipemia Model<br/>
+								27 Analysis on the Spatial - Temporal Differentiation of Agricultural Water Resource Use Efficiency in Yangtze River Economic Belt<br/>
+								28 Fiscal Decentralization Effect on the Efficiency of Basic Education Financial Expenditure: Based on the Malmquist-OLS Two Stage Method<br/>
+								29 A special review on clinical application of Excel rapid sampling<br/>
+								30 Research on Relations Between Political Equilibrium of Local Government and the Provision of Rural Public Goods in China<br/>
+								31 Analysis on the Changes of Medication in Military Outpatient Clinic of a Military Hospital in 2014 and 2018<br/>
+								32 Interweave of the pharmaceutical-related genes and the pathogenic variants in two centenarians affecting the apoptosis pathway<br/>
+								33 Clinical study of uterine artery embolization for refractory postpartum hemorrhage<br/>
+								34 Effect of comprehensive nursing intervention on rehabilitation of patients after total hip arthroplasty<br/>
+								35 Experimental Study on Acute Toxicity of Erfukang Oral Liquid<br/>
+								36 Study on the pharmacodynamics of oral liquid of Erfukang<br/>
+								37 The treatment of calcaneal fracture with percutaneous poking reduction through the gap of fractures and internal fixation with canulated screw<br/>
+								38 Effect of Qingnao tablet on blood stasis model of mice<br/><br/><br/>
 			</p>
 			
-        <del><table border="1" cellpadding="0" cellspacing="0" style="width:80.0%;" width="100%">
+        <!--del><table border="1" cellpadding="0" cellspacing="0" style="width:80.0%;" width="100%">
           <tbody>
           <tr>
             <th style=" height: 38px; padding-left: 20px" colspan="2">2020年10月28日，周三 ---- 签到及注册 （酒店一楼大厅）</th>
@@ -208,7 +208,7 @@ var _hmt = _hmt || [];
 
 
           </tbody>
-        </table></del>&nbsp;<br/>&nbsp;
+        </table></del-->&nbsp;<br/>&nbsp;
       </div>
 
     </div>
@@ -225,10 +225,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
     		<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日截稿</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
     		</div>
