--- a/src/main/resources/templates/page/2021/cn/sci1.html
+++ b/src/main/resources/templates/page/2021/cn/sci1.html
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
         <li><a title="ICABST2021会议日程" href="/cn/program">会议日程</a></li>
         <li><a title="ICABST2021大会征文" href="/cn/cfp">大会征文</a></li>
         <li><a title="ICABST2021参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2021会议地点" href="/cn/venue">会议地点</a></li>
+        <li><a title="ICABST2021分会WPCR" href="/cn/wpcr">WPCR</a></li>
     		<li><a title="ICABST2021英文版" href="/">English</a></li>
     </ul>
   </div>
@@ -128,7 +128,7 @@ var _hmt = _hmt || [];
 				</dl-->
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>截稿时间：</strong>SCI全文为长期征稿，无固定截稿时间，如有发表需求请尽早提交稿件<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊周期：</strong>平均为4-6个月发表<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊版面：</strong>目前仅剩余2021年正刊版面 (2020年版面已于8月初完结)<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊版面：</strong>2021年正刊和专刊版面<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊检索：</strong>影响因子在0.8-3，检索类型为Article（期刊论文检索，无会议信息）<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>注：由我方安排的文章，其中稿率及发表周期将优于作者自行投稿的周期</strong><br/>
 			</p>
@@ -167,7 +167,7 @@ var _hmt = _hmt || [];
 						<div class="pl-23">
             <p><strong>1. 投稿要求</strong><br/>
               所有投稿文章需承诺无一稿多投，未在其他期刊或会议上公开发表;<br/>
-              初稿需为word文档，中英文均可（终稿必须为英文），篇幅在2500words左右，图表分辨率在300dpi以上或作为独立附件提交；<br/>
+              初稿需为word文档，中英文均可（终稿必须为英文），图表分辨率在300dpi以上或作为独立附件提交；<br/>
               初稿无需排版，在文章通过审核后，会根据目标期刊的要求提供模板文件，届时完成排版即可；<br/>
 							<strong>SCI期刊长期征稿，每月均有送交机会，早投稿早发表；</strong><br/>
             </p>
@@ -206,10 +206,10 @@ var _hmt = _hmt || [];
         <div class="f-20 text-center pt-10 pb-10 color-03 f-b">重要日期</div>
     		<div class="pb-10">
         <ul>
-    			<p>会议日期：2020年10月28日-30日</p>
-    			<p>参会报名：2020年9月30日截止</p>
-					<p>SCI摘要：10月10日截稿</p>
-    			<p>EI会议：12月15日本批次截止</p>
+    			<p>会议日期：2021年9月28日-30日</p>
+    			<p>参会报名：2021年9月15日截止</p>
+					<p>SCI摘要：即将开启征稿</p>
+    			<p>EI会议：2020年12月25日截稿</p>
 					<p>SCI全文：每月送交，长期征稿</p>
         </ul>
     		</div>
